# garage

./: .dockerignore  .drone.yml  .gitignore  Cargo.nix  Cargo.toml  Dockerfile  Makefile  README.md  TODO  build.gradle.kts  build.sh  config.dev.toml  default.nix  flake.nix  genkeys.sh  k2v_test.py  make_docker.sh  shell.nix  smithy-build.json  test_delete.sh  test_read.sh  test_write.sh
.woodpecker/: debug.yaml  publish.yaml  release.yaml
doc/: Compatibility.md  Internals.md  Load_Balancing.md  Quickstart.md  Related Work.md
example/: dev-cluster.sh
idl/: k2v.smithy
model/: k2v.smithy
nix/: build_index.nix  common.nix  compile.nix  kaniko.nix  manifest-tool.nix  nix.conf  toolchain.nix  winscp.nix
script/: dev-bucket.sh  dev-clean.sh  dev-cluster.sh  dev-configure.sh  dev-env-aws.sh  dev-env-duck.sh  dev-env-mc.sh  dev-env-rclone.sh  dev-env-s3cmd.sh  dev-env-winscp.sh  dev-env.sh  not-dynamic.sh  simulate_ring.py  test-renumbering.sh  test-skip-part.sh  test-smoke.sh  test-upgrade.sh
src/: admin_rpc.rs  api.rs  api_server.rs  background.rs  block.rs  block_ref_table.rs  bucket_table.rs  config.rs  data.rs  error.rs  http_util.rs  main.rs  membership.rs  proto.rs  (+11 more)
src/admin/: Cargo.toml  lib.rs  metrics.rs  tracing_setup.rs
src/api/: Cargo.toml  api_server.rs  common_error.rs  encoding.rs  error.rs  generic_server.rs  helpers.rs  http_util.rs  lib.rs  mod.rs  router_macros.rs  s3_bucket.rs  s3_copy.rs  s3_cors.rs  s3_delete.rs  s3_get.rs  s3_list.rs  s3_post_object.rs  s3_put.rs  s3_router.rs  s3_website.rs  s3_xml.rs  signature.rs
src/api/admin/: Cargo.toml  admin_token.rs  api.rs  api_server.rs  block.rs  bucket.rs  cluster.rs  error.rs  key.rs  layout.rs  lib.rs  macros.rs  mod.rs  node.rs  openapi.rs  repair.rs  router.rs  router_v0.rs  router_v1.rs  router_v2.rs  special.rs  worker.rs
src/api/common/: Cargo.toml  common_error.rs  cors.rs  generic_server.rs  helpers.rs  lib.rs  router_macros.rs
src/api/common/signature/: body.rs  checksum.rs  error.rs  mod.rs  payload.rs  streaming.rs
src/api/k2v/: Cargo.toml  api_server.rs  batch.rs  error.rs  index.rs  item.rs  lib.rs  mod.rs  range.rs  router.rs
src/api/s3/: Cargo.toml  api_server.rs  bucket.rs  checksum.rs  copy.rs  cors.rs  delete.rs  encryption.rs  error.rs  get.rs  lib.rs  lifecycle.rs  list.rs  mod.rs  multipart.rs  post_object.rs  put.rs  router.rs  website.rs  xml.rs
src/api/signature/: error.rs  mod.rs  payload.rs  streaming.rs
src/block/: Cargo.toml  block.rs  layout.rs  lib.rs  manager.rs  metrics.rs  rc.rs  repair.rs  resync.rs
src/db/: Cargo.toml  counted_tree_hack.rs  lib.rs  lmdb_adapter.rs  metric_proxy.rs  open.rs  sled_adapter.rs  sqlite_adapter.rs  test.rs
src/garage/: Cargo.toml  admin.rs  admin_rpc.rs  cli.rs  main.rs  repair.rs  secrets.rs  server.rs  tracing_setup.rs
src/garage/admin/: block.rs  bucket.rs  key.rs  mod.rs
src/garage/cli/: cmd.rs  convert_db.rs  init.rs  layout.rs  mod.rs  structs.rs  util.rs
src/garage/cli/local/: init.rs  mod.rs
src/garage/cli/remote/: admin_token.rs  block.rs  bucket.rs  cluster.rs  key.rs  layout.rs  mod.rs  node.rs  worker.rs
src/garage/cli_v2/: block.rs  bucket.rs  cluster.rs  key.rs  layout.rs  mod.rs  node.rs  util.rs  worker.rs
src/garage/repair/: mod.rs  offline.rs  online.rs
src/garage/tests/: admin.rs  bucket.rs  lib.rs  list.rs  multipart.rs  objects.rs  simple.rs  streaming_signature.rs  website.rs
src/garage/tests/common/: client.rs  custom_requester.rs  garage.rs  macros.rs  mod.rs  util.rs
src/garage/tests/common/ext/: mod.rs  process.rs
src/garage/tests/k2v/: batch.rs  errorcodes.rs  item.rs  mod.rs  poll.rs  simple.rs
src/garage/tests/k2v_client/: simple.rs
src/garage/tests/s3/: list.rs  mod.rs  multipart.rs  objects.rs  presigned.rs  simple.rs  ssec.rs  streaming_signature.rs  website.rs
src/k2v-client/: Cargo.toml  README.md  error.rs  lib.rs
src/k2v-client/src/: error.rs  lib.rs
src/model/: Cargo.toml  admin_token_table.rs  block.rs  block_metrics.rs  block_ref_table.rs  bucket_alias_table.rs  bucket_helper.rs  bucket_table.rs  garage.rs  index_counter.rs  key_table.rs  lib.rs  migrate.rs  object_table.rs  permission.rs  snapshot.rs  version.rs  version_table.rs
src/model/helper/: bucket.rs  error.rs  key.rs  locked.rs  mod.rs
src/model/k2v/: causality.rs  counter_table.rs  history_table.rs  item_table.rs  mod.rs  poll.rs  rpc.rs  seen.rs  sub.rs
src/model/prev/: mod.rs
src/model/prev/v051/: bucket_table.rs  key_table.rs  mod.rs  object_table.rs  version_table.rs
src/model/s3/: block_ref_table.rs  lifecycle_worker.rs  mod.rs  mpu_table.rs  object_table.rs  version_table.rs
src/net/: Cargo.toml  bytes_buf.rs  client.rs  endpoint.rs  error.rs  lib.rs  message.rs  netapp.rs  peering.rs  recv.rs  send.rs  server.rs  stream.rs  test.rs  util.rs
src/net/peering/: fullmesh.rs  mod.rs
src/rpc/: Cargo.toml  consul.rs  consul_services.rs  graph_algo.rs  kubernetes.rs  layout.rs  lib.rs  membership.rs  metrics.rs  mod.rs  replication_mode.rs  ring.rs  rpc_client.rs  rpc_helper.rs  rpc_server.rs  system.rs  system_metrics.rs  tls_util.rs
src/rpc/layout/: graph_algo.rs  helper.rs  history.rs  manager.rs  mod.rs  schema.rs  test.rs  tracker.rs  version.rs
src/table/: Cargo.toml  crdt.rs  data.rs  gc.rs  lib.rs  merkle.rs  metrics.rs  mod.rs  queue.rs  schema.rs  sync.rs  table.rs  table_fullcopy.rs  table_sharded.rs  table_sync.rs  util.rs
src/table/crdt/: bool.rs  crdt.rs  lww.rs  lww_map.rs  map.rs  mod.rs
src/table/replication/: fullcopy.rs  mod.rs  mode.rs  parameters.rs  sharded.rs
src/util/: Cargo.toml  async_hash.rs  background.rs  bipartite.rs  build.rs  config.rs  data.rs  encode.rs  error.rs  formater.rs  forwarded_headers.rs  lib.rs  metrics.rs  migrate.rs  persister.rs  sled_counter.rs  socket_address.rs  time.rs  token_bucket.rs  tranquilizer.rs  version.rs
src/util/background/: job_worker.rs  mod.rs  vars.rs  worker.rs
src/util/crdt/: bool.rs  crdt.rs  deletable.rs  lww.rs  lww_map.rs  map.rs  mod.rs
src/web/: Cargo.toml  error.rs  lib.rs  web_server.rs
(+260 files in other folders)
