[workspace]
resolver = "2"
members = [
	"src/db",
	"src/util",
	"src/rpc",
	"src/table",
	"src/block",
	"src/model",
	"src/api",
	"src/web",
	"src/garage",
	"src/k2v-client",
]

default-members = ["src/garage"]

[workspace.dependencies]
garage_api = { version = "0.8.2", path = "src/api" }
garage_block = { version = "0.8.2", path = "src/block" }
garage_db = { version = "0.8.2", path = "src/db" }
garage_model = { version = "0.8.2", path = "src/model" }
garage_rpc = { version = "0.8.2", path = "src/rpc" }
garage_table = { version = "0.8.2", path = "src/table" }
garage_util = { version = "0.8.2", path = "src/util" }
garage_web = { version = "0.8.2", path = "src/web" }

[profile.dev]
lto = "off"

[profile.release]
debug = true
