[workspace]
resolver = "2"
members = [
	"src/db",
	"src/util",
	"src/rpc",
	"src/table",
	"src/block",
	"src/model",
	"src/api",
	"src/web",
	"src/garage",
	"src/k2v-client",
	"src/format-table",
]

default-members = ["src/garage"]

[workspace.dependencies]
format_table = { version = "0.1.1", path = "src/format-table" }
garage_api = { version = "0.8.4", path = "src/api" }
garage_block = { version = "0.8.4", path = "src/block" }
garage_db = { version = "0.8.4", path = "src/db", default-features = false }
garage_model = { version = "0.8.4", path = "src/model", default-features = false }
garage_rpc = { version = "0.8.4", path = "src/rpc" }
garage_table = { version = "0.8.4", path = "src/table" }
garage_util = { version = "0.8.4", path = "src/util" }
garage_web = { version = "0.8.4", path = "src/web" }
k2v-client = { version = "0.0.4", path = "src/k2v-client" }

[profile.dev]
lto = "off"

[profile.release]
debug = true
