[package]
name = "garage_block"
version = "1.2.0"
authors = ["Alex Auvolat <alex@adnab.me>"]
edition = "2018"
license = "AGPL-3.0"
description = "Block manager for the Garage object store"
repository = "https://git.deuxfleurs.fr/Deuxfleurs/garage"
readme = "../../README.md"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garage_db.workspace = true
garage_net.workspace = true
garage_rpc.workspace = true
garage_util.workspace = true
garage_table.workspace = true

opentelemetry.workspace = true

arc-swap.workspace = true
async-trait.workspace = true
bytes.workspace = true
bytesize.workspace = true
hex.workspace = true
tracing.workspace = true
rand.workspace = true

async-compression.workspace = true
zstd.workspace = true

serde.workspace = true

futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[features]
system-libs = [ "zstd/pkg-config" ]
