[package]
name = "garage_db"
version = "0.8.0"
authors = ["Alex Auvolat <alex@adnab.me>"]
edition = "2018"
license = "AGPL-3.0"
description = "Abstraction over multiple key/value storage engines that supports transactions"
repository = "https://git.deuxfleurs.fr/Deuxfleurs/garage"
readme = "../../README.md"

[lib]
path = "lib.rs"

[[bin]]
name = "convert"
path = "bin/convert.rs"
required-features = ["cli"]

[dependencies]
err-derive = "0.3"
hexdump = "0.1"
log = "0.4"

heed = "0.11"
rusqlite = { version = "0.27", features = ["bundled"] }
sled = "0.34"

# cli deps
clap = { version = "3.1.18", optional = true, features = ["derive", "env"] }
pretty_env_logger = { version = "0.4", optional = true }

[dev-dependencies]
mktemp = "0.4"

[features]
cli = ["clap", "pretty_env_logger"]
