[package]
name = "garage_db"
version = "0.9.2"
authors = ["Alex Auvolat <alex@adnab.me>"]
edition = "2018"
license = "AGPL-3.0"
description = "Abstraction over multiple key/value storage engines that supports transactions"
repository = "https://git.deuxfleurs.fr/Deuxfleurs/garage"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
err-derive.workspace = true
hexdump.workspace = true
tracing.workspace = true

heed = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
sled = { workspace = true, optional = true }

[dev-dependencies]
mktemp.workspace = true

[features]
default = [ "sled", "lmdb", "sqlite" ]
bundled-libs = [ "rusqlite?/bundled" ]
lmdb = [ "heed" ]
sqlite = [ "rusqlite" ]
