[package]
name = "garage_model"
version = "0.8.5"
authors = ["Alex Auvolat <alex@adnab.me>"]
edition = "2018"
license = "AGPL-3.0"
description = "Core data model for the Garage object store"
repository = "https://git.deuxfleurs.fr/Deuxfleurs/garage"
readme = "../../README.md"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garage_db.workspace = true
garage_rpc.workspace = true
garage_table.workspace = true
garage_block.workspace = true
garage_util.workspace = true

async-trait = "0.1.7"
arc-swap = "1.0"
blake2 = "0.10"
err-derive = "0.3"
hex = "0.4"
base64 = "0.21"
tracing = "0.1"
rand = "0.8"
zstd = { version = "0.12", default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
serde_bytes = "0.11"

futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", default-features = false, features = ["rt", "rt-multi-thread", "io-util", "net", "time", "macros", "sync", "signal", "fs"] }
opentelemetry = "0.17"

netapp = "0.5"

[features]
default = [ "sled" ]
k2v = [ "garage_util/k2v" ]
lmdb = [ "garage_db/lmdb" ]
sled = [ "garage_db/sled" ]
sqlite = [ "garage_db/sqlite" ]
